2017-10-31 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 1.1.0
  * changed default puppet versions for FreeBSD versions (acceptance tests)
  * added support for FreeBSD 11.1 and 12.0 (acceptance tests)
  * minor fixes to README's
2016-11-12 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 1.0.1
  * fixed issue #2 (we now depend on beaker >= 3.2.0)
  * release 1.0.0 (we're approved on forge.puppetlabs.com)
  * adjust Gemfile a little
2016-09-21 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.2.2
  * depend on specinfra >= 2.63.1
  * release 0.2.1
  * made corrections to metadata.json
  * reverted specinfra patch for ruby < 1.9
2016-09-20 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * remove specinfra patch and use specinfra >= 2.63.0 (which is fixed)
2016-09-18 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.2.0
  * several fixes, mainly for older FreeBSD
2016-09-12 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.9
  * added .codeclimage.yml
  * introduced rubycop
2016-09-11 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.8
  * patch specinfra so that acceptance tests work on FreeBSD 9.3 + pkgng
2016-09-10 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * use tins < 1.7.0 for ruby < 2.0
  * revert temporary fix for travis issue #1793
  * use json_pure < 2.0.0 for ruby < 2.0
  * added acceptance tests to test package_settings
  * fixed typo in Vagrantfile
2016-06-24 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * minor revision to README.md
2016-05-24 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * initially implemented acceptance testing machinery
2016-05-23 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * updated Vagrantfile to use ptomulik/freebsd-* boxes from atlas.hashicorp.com
2016-05-19 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.6
  * corrected project_site url in metadata.json
  * adjustments to Gemfile (bundle install now works on ruby 1.8 again)
  * adjustments to .travis.yml (more versions to test)
  * release 0.1.5