@@ -3,85 +3,64 @@ sudo: false
 language: ruby
 before_install:
   - gem --version
-rvm:
-  - 1.8.7
-  - 1.9.3
-  - 2.0.0
-  - 2.1
-  - 2.2
-    #  - ruby-head
+  - gem dependency
 
-bundler_args: --without acceptance
+addons:
+  apt:
+    packages:
+      - libxml2-dev
+      - libxslt-dev
+
+before_install:
+  - gem update
+
+bundler_args: --path vendor
+
 
 script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
-env:
-  matrix:
-    - PUPPET_GEM_VERSION="~> 2.7.0"
-    - PUPPET_GEM_VERSION="~> 3.0.0"
-    - PUPPET_GEM_VERSION="~> 3.1.0"
-    - PUPPET_GEM_VERSION="~> 3.2.0"
-    - PUPPET_GEM_VERSION="~> 3.3.0"
-    - PUPPET_GEM_VERSION="~> 3.4.0"
-    - PUPPET_GEM_VERSION="~> 3.5.0"
-    - PUPPET_GEM_VERSION="~> 3.6.0"
-    - PUPPET_GEM_VERSION="~> 3.7.0"
-    - PUPPET_GEM_VERSION="~> 3.8.0"
-    - PUPPET_GEM_VERSION="~> 4.0.0"
-    - PUPPET_GEM_VERSION="~> 4.1.0"
-    - PUPPET_GEM_VERSION="~> 4.2.0"
-    - PUPPET_GEM_VERSION="~> 4.3.0"
-    - PUPPET_GEM_VERSION="~> 4.4.0"
 matrix:
   allow_failures:
     # - rvm: ruby-head
-  exclude:
+  include:
     - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 4.0.0"
-    - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 4.1.0"
-    - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 4.2.0"
-    - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 4.3.0"
-    - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 4.4.0"
-    - rvm: 1.9.3
       env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 3.0.0"
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 3.1.0"
-    - rvm: 2.1
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: 2.1
-      env: PUPPET_GEM_VERSION="~> 3.0.0"
-    - rvm: 2.1
-      env: PUPPET_GEM_VERSION="~> 3.1.0"
-    - rvm: 2.1
-      env: PUPPET_GEM_VERSION="~> 3.2.0"
-    - rvm: 2.1
-      env: PUPPET_GEM_VERSION="~> 3.3.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.0.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.1.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.2.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.3.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.4.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.5.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.6.0"
-    - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.7.0"
-    - rvm: 2.2
+    - rvm: 1.8.7
       env: PUPPET_GEM_VERSION="~> 3.8.0"
+    - rvm: 1.9.3
+      env: PUPPET_GEM_VERSION="~> 3.0.0"
+    - rvm: 1.9.3
+      env: PUPPET_GEM_VERSION="~> 4"
+    - rvm: 1.9.3
+      env: PUPPET_GEM_VERSION="~> 5"
+    - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 3.2.0"
+    - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 4"
+    - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 5"
+    - rvm: 2.1
+      env: PUPPET_GEM_VERSION="~> 3.4.0"
+    - rvm: 2.1
+      env: PUPPET_GEM_VERSION="~> 4"
+    - rvm: 2.1
+      env: PUPPET_GEM_VERSION="~> 5"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 4.0.0"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 4"
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="~> 5"
+    - rvm: 2.3
+      env: PUPPET_GEM_VERSION="~> 4.0.0"
+    - rvm: 2.3
+      env: PUPPET_GEM_VERSION="~> 4"
+    - rvm: 2.3
+      env: PUPPET_GEM_VERSION="~> 5"
+    - rvm: 2.4
+      env: PUPPET_GEM_VERSION="~> 4.8.0"
+    - rvm: 2.4
+      env: PUPPET_GEM_VERSION="~> 4"
+    - rvm: 2.4
+      env: PUPPET_GEM_VERSION="~> 5"
 notifications:
   email: false
