@@ -1,3 +1,5 @@
+2017-11-01 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * revised/updated Gemfile and .travis.yml, support for puppet 5 and ruby 2.4
 2017-10-31 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
   * release 1.1.0
   * changed default puppet versions for FreeBSD versions (acceptance tests)
